--- a/index.html
+++ b/index.html
@@ -92,7 +92,23 @@
       </div>
     </section>
 
-    <footer class="footer text-faded text-center py-5">
+    <section class="page-section cta">
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-9 mx-auto">
+            <div class="cta-inner text-center rounded">
+              <h2 class="section-heading mb-4">
+                <span class="section-heading-upper">Feature B Branch</span>
+                <span class="section-heading-lower">Our Second Branch</span>
+              </h2>
+              <p class="mb-0">When you walk into our shop to start your day, we are dedicated to providing you with friendly service, a welcoming atmosphere, and above all else, excellent products made with the highest quality ingredients. If you are not satisfied, please let us know and we will do whatever we can to make things right!</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+	  <footer class="footer text-faded text-center py-5">
       <div class="container">
         <p class="m-0 small">Copyright &copy; Your Website 2017</p>
       </div>
