Changed text Laura

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <span class="section-heading-upper">Feature A Branch</span>
                 <span class="section-heading-lower">Our First Branch</span>
               </h2>
-              <p class="mb-0">When you walk into our shop to start your day, we are dedicated to providing you with friendly service, a welcoming atmosphere, and above all else, excellent products made with the highest quality ingredients. If you are not satisfied, please let us know and we will do whatever we can to make things right!</p>
+              <p>Display Features</p>
             </div>
           </div>
         </div>
