--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <span class="section-heading-upper">Feature B Branch</span>
                 <span class="section-heading-lower">Our Second Branch</span>
               </h2>
-              <p class="mb-0">When you walk into our shop to start your day, we are dedicated to providing you with friendly service, a welcoming atmosphere, and above all else, excellent products made with the highest quality ingredients. If you are not satisfied, please let us know and we will do whatever we can to make things right!</p>
+              <p>Premium Display Features for Customers</p>
             </div>
           </div>
         </div>
